--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bedrock-protocol": "^3.31.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2"
